--- a/rest_app/Dockerfile
+++ b/rest_app/Dockerfile
@@ -2,9 +2,9 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-COPY app.py requirements.txt ./
+COPY app.py ./
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install Flask
 
 EXPOSE 8000
 
